@@ -1,5 +1,4 @@
 package com.portfolio.portfolio.Security.Entity;
-
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -7,29 +6,33 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-
-
 /**
  *
  * @author Usuario
  */
 public class UsuarioPrincipal implements UserDetails {
 
+    private String nombre;
     private String nombreUsuario;
+    private String email;
     private String password;
     private Collection<? extends GrantedAuthority> authorities;
 
     //Constructor
-    public UsuarioPrincipal(String nombreUsuario, String password, Collection<? extends GrantedAuthority> authorities) {
+    public UsuarioPrincipal(String nombre, String nombreUsuario, String email, String password, Collection<? extends GrantedAuthority> authorities) {
+        this.nombre = nombre;
         this.nombreUsuario = nombreUsuario;
+        this.email = email;
         this.password = password;
         this.authorities = authorities;
     }
 
     public static UsuarioPrincipal build(Usuario usuario) {
-        List<GrantedAuthority> authorities = usuario.getRoles().stream().map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors.toList());
-        return new UsuarioPrincipal(usuario.getNombreUsuario(),
-                 usuario.getPassword(), authorities);
+        List<GrantedAuthority> authorities = usuario.getRoles().stream()
+                .map(rol -> new SimpleGrantedAuthority(rol.getRolNombre().name())).collect(Collectors
+                        .toList());
+        return new UsuarioPrincipal(usuario.getNombre(), usuario.getNombreUsuario(), usuario.getEmail(),
+                usuario.getPassword(), authorities);
     }
 
     @Override
@@ -42,7 +45,16 @@ public class UsuarioPrincipal implements UserDetails {
         return password;
     }
 
-    public String getNombreUsuario() {
+    public String getNombre() {
+        return nombre;
+    }
+
+    public String getEmail() {
+        return email;
+    }
+
+    @Override
+    public String getUsername() {
         return nombreUsuario;
     }
 
@@ -64,11 +76,6 @@ public class UsuarioPrincipal implements UserDetails {
     @Override
     public boolean isEnabled() {
         return true;
-    }
-
-    @Override
-    public String getUsername() {
-        throw new UnsupportedOperationException("Not supported yet."); // Generated from nbfs://nbhost/SystemFileSystem/Templates/Classes/Code/GeneratedMethodBody
     }
 
 }
